--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1> Hello mama!! i can push to github </h1>
-    <p>amar kobita likhte vlo lage</p>
+    <h1> Hello amama!! i can push to github </h1>
+    <p>i am ghost rider </p>
 </body>
 </html>
